argocd/raw-manifests/local-production/sample-dotnet/prod-bluegreen/wf-bg-preview-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: sample-dotnet-wf-prod-bluegreen-preview-vs
  namespace: istio-system
spec:
  hosts:
    - "wf-bg-preview.prod.local"
  gateways:
    - istio-ingressgateway-production
  http:
    - route:
        - destination:
            host: sample-dotnet-wf-prod-prod-bluegreen-service-preview.sample-dotnet-wf-prod-prod-bluegreen.svc.cluster.local
            port:
              number: 80
